initial html changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles/main.css">
 
   <!-- replace with your personal Font Awesome CDN link -->
-  <script src="https://use.fontawesome.com/???.js"></script>
+  <script src="https://use.fontawesome.com/eee0008cc4.js"></script>
 </head>
 
 <body>
@@ -48,6 +48,14 @@
     <div class="item-container">
       <div class="item">
         <!-- code template for a single item will go here -->
+        <div class="thumbnail">
+          <img src="images/wool-cable.jpeg" alt="wool cable scarf">
+        </div>
+        <div class="details">
+          <h4>Wool Cable Knit</h4>
+          <p>Price: $35.00</p>
+          <p>Details: Chunky cable lending a classic style to this cozy and warm wool scarf knit from soft lambs wool.  45" long, 15" wide.  100% merino wool.  Dry clean only.  Made in 'Merica!</p>
+        </div>
       </div>
     </div>
   </section>
