--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
         <div class="details">
           <h4>Wool Cable Knit</h4>
-          <p>Price: $35.00</p>
-          <p>Details: Chunky cable lending a classic style to this cozy and warm wool scarf knit from soft lambs wool.  45" long, 15" wide.  100% merino wool.  Dry clean only.  Made in 'Merica!</p>
+          <p>Price: $49.99</p>
+          <p>Desription: Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
         </div>
       </div>
     </div>
