--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="styles/main.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Rochester" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600" rel="stylesheet"> 
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
   <!-- replace with your personal Font Awesome CDN link -->
   <script src="https://use.fontawesome.com/eee0008cc4.js"></script>
@@ -16,7 +21,6 @@
 
 <body>
   <header>
-    <h1>Winter Wear Warehouse</h1>
     <nav class="topnav">
       <ul class="site-nav">
         <li><a href="#">Hats</a></li>
@@ -27,40 +31,43 @@
         </li>
       </ul>
     </nav>
+    <img class="logo" src="images/logo-scarfcat.png" alt="logo">
+    <h1 class="name">Winter Wear Warehouse</h1>
   </header>
 
-  <aside>
-    <form name="sortBy" onSubmit="capture()";>
-      <label>Filter By:
-        <select name="filter" class="sort">
-          <option value="">Choose One</option>
-          <option value="price">Price</option>
-          <option value="name">Name</option>
-        </select>
-      </label>
+  <div class="container">
+    <div class="row">
+      <aside class="col-md-2 col-sm-3 col-xs-12">
+        <form class="sort" name="sortBy" onSubmit="capture()";>
+          <div class="form-group">
+            <label class="filter-lable">Filter By:
+              <select name="filter" class="form-control">
+                <option value="">Choose One</option>
+                <option value="price">Price</option>
+                <option value="name">Name</option>
+              </select>
+            </label>
+            <button class="btn btn-default" type="submit">Sort</button>
+          </div>
+        </form>
+      </aside>
 
-      <input type="submit" value="Sort">
-    </form>
-  </aside>
-
-  <section>
-    <h2>Scarves</h2>
-
-    <div class="item-container">
-      <div class="item">
-        <!-- code template for a single item will go here -->
-        <div class="thumbnail">
-          <img src="images/wool-cable.jpeg" alt="wool cable scarf">
-        </div>
-        <div>
-          <h3>Wool Cable Knit</h3>
-          <p><strong>Price:</strong> $49.99</p>
-          <p>Desription: Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
+   <section class="col-md-10 col-sm-9 col-xs-12">
+    <h2 class="item-header">Scarves</h2>
+      <div class="item-container row">
+        <div class="item col-md-4 col-sm-6 col-xs-12">
+          <img class="thumbnail" src="images/wool-cable.jpeg" alt="wool cable scarf">
+          <h3 class="item-title">Wool Cable Knit</h3>
+            <p><strong>Price:</strong> $49.99</p>
+            <p><strong>Desription:</strong> Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
+            </div>
         </div>
       </div>
+    </section>
     </div>
-  </section>
 
   <script type="text/javascript" src="js/script.js"></script>
+     <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
