correction to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="row">
       <aside class="col-md-2 col-sm-3 col-xs-12">
-        <form class="sort" name="sortBy" onSubmit="capture()";>
+        <form class="sort" name="sortBy" onSubmit="capture()">
           <div class="form-group">
             <label class="filter-lable">Filter By:
               <select name="filter" class="form-control">
@@ -60,11 +60,11 @@
           <h3 class="item-title">Wool Cable Knit</h3>
             <p><strong>Price:</strong> $49.99</p>
             <p><strong>Desription:</strong> Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
-            </div>
         </div>
       </div>
-    </section>
-    </div>
+     </section>
+    </div>  
+  </div>
 
   <script type="text/javascript" src="js/script.js"></script>
      <!-- Latest compiled and minified JavaScript -->
