correct jquery error

--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
   <!-- replace with your personal Font Awesome CDN link -->
   <script src="https://use.fontawesome.com/eee0008cc4.js"></script>
 </head>
@@ -73,7 +67,7 @@
           <div class="thumbnail">
             <img srcset="images/reversible-plaid.jpg 1280w, images/reversible-plaid-800w.jpg 800w, images/reversible-plaid-400w.jpg 400w"
                  sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/reversible-plaid.jpg"
+                 src="images/reversible-plaid-400w.jpg"
                  alt="image of reversible plaid scarf">
           </div>
           <h3 class="item-title">Reversible Plaid</h3>
@@ -84,7 +78,7 @@
           <div class="thumbnail">
             <img srcset="images/northern-lights.jpg 1280w, images/northern-lights-800w.jpg 800w, images/northern-lights-400w.jpg 400w"
                  sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/northern-lights.jpg"
+                 src="images/northern-lights-400w.jpg"
                  alt="image of reversible plaid scarf">
           </div>
           <h3 class="item-title">Northern Lights</h3>
@@ -96,7 +90,7 @@
           <div class="thumbnail">
             <img srcset="images/ombre-infinity.jpg 1280w, images/ombre-infinity-800w.jpg 800w, images/ombre-infinity-400w.jpg 400w"
                  sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/ombre-infinity.jpg"
+                 src="images/ombre-infinity-400w.jpg"
                  alt="image of ombre infinity scarf">
           </div>
           <h3 class="item-title">Ombre Infinity</h3>
@@ -108,7 +102,7 @@
           <div class="thumbnail">
             <img srcset="images/fringed-plaid.jpeg 1280w, images/fringed-plaid-800w.jpeg 800w, images/fringed-plaid-400w.jpeg 400w"
                  sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/fringed-plaid.jpeg"
+                 src="images/fringed-plaid-400w.jpeg"
                  alt="image of fringed plaid scarf">
           </div>
           <h3 class="item-title">Fringed Plaid</h3>
@@ -120,7 +114,7 @@
           <div class="thumbnail">
             <img srcset="images/multi-color.jpeg 1280w, images/multi-color-800w.jpeg 800w, images/multi-color-400w.jpeg 400w"
                  sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/multi-color.jpeg"
+                 src="images/multi-color-400w.jpeg"
                  alt="image of multi-color scarf">
           </div>
           <h3 class="item-title">Multi Color</h3>
@@ -132,7 +126,7 @@
           <div class="thumbnail">
             <img srcset="images/etro.png 1280w, images/etro-800w.png 800w, images/etro-400w.png 400w"
                  sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/etro.png"
+                 src="images/etro-400w.png"
                  alt="image of etro silk scarf">
           </div>
           <h3 class="item-title">Etro Paisley-Print Silk</h3>
@@ -143,7 +137,7 @@
           <div class="thumbnail">
             <img srcset="images/twill.jpg 1280w, images/twill-800w.jpg 800w, images/twill-400w.jpg 400w"
                  sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/twill.jpg"
+                 src="images/twill-400w.jpg"
                  alt="image of Ashby twill scarf">
           </div>
           <h3 class="item-title">Ashby Twill</h3>
