add media queries and fix image sizes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Winter Scarves</title>
 
   <meta charset="utf-8">
-
+  <meta name="viewport" content="initial-scale=1.0, width=device-width" />
+  
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Rochester" rel="stylesheet"> 
@@ -54,9 +55,9 @@
       <div class="item-container row">
         <div class="item col-xs-12 col-md-3 col-sm-6">
           <div class="thumbnail">
-            <img srcset="images/wool-cable.jpeg 300w, images/wool-cable-800w.jpeg 800w, images/wool-cable-400w.jpeg 400w"
-                 sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/wool-cable.jpeg"
+            <img srcset="images/wool-cable-400w.jpeg 400w, images/wool-cable-230w.jpeg 230w"
+                 sizes="(min-width: 1280px) 370px, (max-width: 1006px) 230px"
+                 src="images/wool-cable-400w.jpeg"
                  alt="image of wool cabel scarf">
           </div>
           <h3 class="item-title">Wool Cable Knit</h3>
@@ -65,9 +66,9 @@
         </div>
         <div class="item col-xs-12 col-md-3 col-sm-6">
           <div class="thumbnail">
-            <img srcset="images/reversible-plaid.jpg 1280w, images/reversible-plaid-800w.jpg 800w, images/reversible-plaid-400w.jpg 400w"
-                 sizes="(max-width: 800px) 400px, (max-width: 1600px) 800px, (min-width: 1601px) 1200px"
-                 src="images/reversible-plaid-400w.jpg"
+            <img srcset="images/reversible-plaid-370w.jpg 370w, images/reversible-plaid-230w.jpg 230w"
+                 sizes="(min-width: 1280px) 370px, (max-width: 1006px) 230px"
+                 src="images/reversible-plaid-370w.jpg"
                  alt="image of reversible plaid scarf">
           </div>
           <h3 class="item-title">Reversible Plaid</h3>
