update cart when items added or removed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#">Hats</a></li>
         <li><a href="#">Gloves</a></li>
         <li><a href="#">Scarves</a></li>
-        <li class="cart-info">
+        <li class="cart-info"><span id="total"></span>&nbsp; 
           <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         </li>
       </ul>
